yaml/istio/ns-sample.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-sample
  labels:
    kubernetes.io/metadata.name: ns-sample
    istio-injection: enabled
